Added National Taxes

--- a/DSL/DMapper/hbs/get_national_taxes_with_code.handlebars
+++ b/DSL/DMapper/hbs/get_national_taxes_with_code.handlebars
@@ -1,8 +1,8 @@
 {
-    "employees": [
+    "national_taxes": [
     {{#each hits}}
             {
-              "result": {{ _source.workers }},
+              "result": {{ _source.national_taxes }},
               "name": "{{ _source.name }}"
             }{{#unless @last}},{{/unless}}
     {{/each}}
