Implement companies and municipalities import (#48)

--- a/DSL/DMapper/hbs/get_revenue_with_code.handlebars
+++ b/DSL/DMapper/hbs/get_revenue_with_code.handlebars
@@ -2,7 +2,7 @@
     "revenue": [
     {{#each hits}}
             {
-              "result": {{ _source.turnover }},
+              "result": "{{ _source.turnover }}",
               "name": "{{ _source.name }}"
             }{{#unless @last}},{{/unless}}
     {{/each}}
