--- a/DSL/DMapper/hbs/get_national_taxes_with_code.handlebars
+++ b/DSL/DMapper/hbs/get_national_taxes_with_code.handlebars
@@ -2,7 +2,7 @@
     "national_taxes": [
     {{#each hits}}
             {
-              "result": {{ _source.national_taxes }},
+              "result": "{{ _source.national_taxes }}",
               "name": "{{ _source.name }}"
             }{{#unless @last}},{{/unless}}
     {{/each}}
