--- a/DSL/DMapper/hbs/get_work_force_taxes_with_code.handlebars
+++ b/DSL/DMapper/hbs/get_work_force_taxes_with_code.handlebars
@@ -2,7 +2,7 @@
     "work_force_taxes": [
     {{#each hits}}
             {
-              "result": {{ _source.labor_taxes_and_payments }},
+              "result": "{{ _source.labor_taxes_and_payments }}",
               "name": "{{ _source.name }}"
             }{{#unless @last}},{{/unless}}
     {{/each}}
