feat: add yml + hbs for simple data, beneficial owners, related persons

--- a/DSL/DMapper/hbs/get-business-register-detailed-company-data.handlebars
+++ b/DSL/DMapper/hbs/get-business-register-detailed-company-data.handlebars
@@ -1,7 +1,8 @@
 {
+    "ariregistri_kood": {{ keha.ariregistri_kood }},
     "nimi": {{ keha.nimi }},
     "sidevahendid": [
-    {{#each keha.yldanmed.sidevahendid.item }}
+    {{#each keha.yldandmed.sidevahendid.item }}
         {
             "liik": {{ liik }},
             "sisu": {{ sisu }}
