60 rest endpoint to retrieve national holidays in estonia (#159)
* refactored CS repo (#154) (#156) (#157)

* refactored CS repo

* added missing nationa-holiday service

* added missing national-holidays

* national-holidays documentation and electricity

* rename rahvalagatus to public-initiatives and moved initiatives-events-popular to legacy

* deleted national-holidays routing file - not needed

---------

Co-authored-by: Mati Kljukin <matik@matik-5420.ria.ee>

* 60 rest endpoint to retrieve national holidays in estonia (#158)

* refactored hbs/calendar directory

* minor refactor next steps

* update HB, refactor national-services

* HB for by-month service. refactored other sevices to use HB

* addede result formatting

* output formatting

* update readme and small refactor

* mock ytd service

* added mock services

--------

Co-authored-by: Mati Kljukin <matik@matik-5420.ria.ee>

--- a/DSL/DMapper/hbs/calendar/national-holidays/get_national_holiday_ytd.handlebars
+++ b/DSL/DMapper/hbs/calendar/national-holidays/get_national_holiday_ytd.handlebars
@@ -22,5 +22,5 @@
 -->
 
 {
-  "result": "Kõik pühad aasta algusest kuni tänaseni:{{#each response}}\n* {{this.date}}\n{{this.name}}\n{{/each}}"
+  "result": "Kõik riigipühad aasta algusest kuni tänaseni:{{#each response}}\n* {{this.date}}\n{{this.name}}\n{{/each}}"
 }
