--- a/DSL/DMapper/hbs/calendar/national-holidays/get_national_holidays.handlebars
+++ b/DSL/DMapper/hbs/calendar/national-holidays/get_national_holidays.handlebars
@@ -20,5 +20,5 @@
 }
 -->
 {
-  "result": "Kõik pühad sellel aastal on:\n{{#each response}} * {{this.date}}\n{{this.name}}\n{{/each}}"
+  "result": "Kõik riigipühad sellel aastal on:\n{{#each response}} * {{this.date}}\n{{this.name}}\n{{/each}}"
 }
