--- a/DSL/DMapper/hbs/get-business-register-related-persons.handlebars
+++ b/DSL/DMapper/hbs/get-business-register-related-persons.handlebars
@@ -1,13 +1,14 @@
 {
     "seosed": [
-        {{#each seosed}}
+        {{#each keha.seosed}}
             {
                 "eesnimi": "{{ eesnimi }}",
                 "nimi_arinimi": "{{ nimi_arinimi }}",
                 "isiku_roll": "{{ isiku_roll }}",
+                "isikukood_registrikood": "{{ isikukood_registrikood }}",
                 "isiku_roll_tekstina": "{{ isiku_roll_tekstina }}"
             }{{#unless @last}},{{/unless}}
         {{/each}}
     ],
-    "text": "{{#each seosed}}{{#if @first}}{{else}}; {{/if}}{{#if eesnimi}}{{eesnimi}} {{nimi_arinimi}}{{else}}{{nimi_arinimi}}{{/if}} on {{isiku_roll_tekstina}}{{/each}}."
+    "text": "{{#each keha.seosed}}{{#if @first}}{{else}}; {{/if}}{{#if eesnimi}}{{eesnimi}} {{nimi_arinimi}}{{else}}{{nimi_arinimi}}{{/if}} on {{isiku_roll_tekstina}}{{/each}}."
 }
