--- a/DSL/DMapper/hbs/calendar/national-holidays/get_national_holiday_eoy.handlebars
+++ b/DSL/DMapper/hbs/calendar/national-holidays/get_national_holiday_eoy.handlebars
@@ -1,29 +1,3 @@
-<!--
-### Input example:
 {
-    "response": [
-        {
-            "date": "2024-12-24",
-            "name": "jõululaupäev"
-        },
-        {
-            "date": "2024-12-25",
-            "name": "esimene jõulupüha"
-        },
-        {
-            "date": "2024-12-26",
-            "name": "teine jõulupüha"
-        }
-    ]
-}
-
-### Output example:
-{
-  "result": "Kõik riigipühad alates tänsest kuni aasta lõpuni on: \n*2024-12-24\n jõululaupäev\n\n *2024-12-25\n esimene jõulupüha\n\n *2024-12-26\n teine jõulupüha\n\n"
-}
-
--->
-
-{
-  "result": "Kõik riigipühad alates tänsest kuni aasta lõpuni on: \n{{#each response}}*{{date}}\n {{name}}\n\n{{#unless @last}} {{/unless}}{{/each}}"
+  "result": "Kõik riigipühad alates tänsest kuni aasta lõpuni on:{{#each data}}\\n* {{date}}\\n{{name}}\\n\\n{{#unless @last}} {{/unless}}{{/each}}"
 }
