--- a/DSL/DMapper/hbs/get-business-register-simple-company-data.handlebars
+++ b/DSL/DMapper/hbs/get-business-register-simple-company-data.handlebars
@@ -1,10 +1,10 @@
 {
-    "nimi": {{ evnimi }},
-    "ariregistri_kood": {{ ariregistri_kood }},
-    "oiguslik_vorm": {{ oiguslik_vorm }},
-    "oiguslik_vorm_tekstina": {{ oiguslik_vorm_tekstina }},
-    "staatus": {{ staatus }},
-    "staatus_tekstina": {{ staatus_tekstina }},
-    "esmakande_aeg": {{ esmakande_aeg }},
-    "text": "{{evnimi}} on {{oiguslik_vorm_tekstina}} ({{oiguslik_vorm}}), registrikoodiga {{ariregistri_kood}} ja on hetkel {{staatus_tekstina}}. Ettevõte on registreeritud {{esmakande_aeg}}."
+    "nimi": "{{ keha.evnimi }}",
+    "ariregistri_kood": "{{ keha.ariregistri_kood }}",
+    "oiguslik_vorm": "{{ keha.oiguslik_vorm }}",
+    "oiguslik_vorm_tekstina": "{{ keha.oiguslik_vorm_tekstina }}",
+    "staatus": "{{ keha.staatus }}",
+    "staatus_tekstina": "{{ keha.staatus_tekstina }}",
+    "esmakande_aeg": "{{ keha.esmakande_aeg }}",
+    "text": "{{keha.evnimi}} on {{keha.oiguslik_vorm_tekstina}} ({{keha.oiguslik_vorm}}), registrikoodiga {{keha.ariregistri_kood}} ja on hetkel {{keha.staatus_tekstina}}. Ettevõte on registreeritud {{keha.esmakande_aeg}}."
 }
