--- a/DSL/DMapper/hbs/statistics-estonia/get_consumer_price_index.handlebars
+++ b/DSL/DMapper/hbs/statistics-estonia/get_consumer_price_index.handlebars
@@ -1,3 +1,14 @@
-{
-   "result": "{{#if (eq data.indicator "previous_month")}}### Tarbijahinnaindeksi muutus võrreldes eelmise kuuga{{else if (eq data.indicator "previous_year")}}### Tarbijahinnaindeksi muutus võrreldes eelmise aasta sama kuuga{{/if}}{{#each data.years}}** {{@key}} **{{#each ../data.months}}{{this}}: {{lookup ../value @key}}{{/each}}{{/each}}"
-}
+[
+{{#each data.botMessages}}
+  {
+   "chatId": "{{../data.chatId}}",
+   "content": "{{filterConsumerPriceIndexData data}}",
+   "buttons": "[{{#each buttons}}{\"title\": \"{{{title}}}\",\"payload\": \"{{{payload}}}\"}{{#unless @last}},{{/unless}}{{/each}}]",
+   "authorTimestamp": "{{../data.authorTimestamp}}",
+   "authorId": "{{../data.authorId}}",
+   "authorFirstName": "{{../data.authorFirstName}}",
+   "authorLastName": "{{../data.authorLastName}}",
+   "created": "{{../data.created}}"
+  }{{#unless @last}},{{/unless}}
+{{/each}}
+]
