--- a/DSL/DMapper/hbs/get_employees_with_code.handlebars
+++ b/DSL/DMapper/hbs/get_employees_with_code.handlebars
@@ -2,8 +2,8 @@
     "employees": [
     {{#each hits}}
             {
-              "result": {{ _source.workers }},
-              "name": "{{ _source.name }}"
+              "text": "{{ _source.workers }} inimest töötab firmas {{ _source.name }}",
+              "result": "{{ _source.name }}"
             }{{#unless @last}},{{/unless}}
     {{/each}}
     ]
