--- a/DSL/DMapper/hbs/calendar/national-holidays/get_national_holiday_eoy.handlebars
+++ b/DSL/DMapper/hbs/calendar/national-holidays/get_national_holiday_eoy.handlebars
@@ -1,3 +1,3 @@
 {
-  "result": "Kõik riigipühad alates tänsest kuni aasta lõpuni on:{{#each data}}\\n* {{date}}\\n{{name}}\\n\\n{{#unless @last}} {{/unless}}{{/each}}"
+  "result": "Kõik riigipühad alates tänasest kuni aasta lõpuni on:\\n\\n{{#each data}}{{formatDate this.date}} - {{this.name}}\\n{{/each}}"
 }
