--- a/DSL/DMapper/hbs/calendar/national-holidays/get_national_holidays.handlebars
+++ b/DSL/DMapper/hbs/calendar/national-holidays/get_national_holidays.handlebars
@@ -1,3 +1,3 @@
 {
-  "result": "Kõik riigipühad sellel aastal on:\\n{{#each data}} * {{this.date}}\\n{{this.name}}\\n{{/each}}"
+  "result": "Kõik riigipühad käesoleval aastal on:\\n\\n{{#each data}} {{formatDate this.date}} - {{this.name}}\\n{{/each}}"
 }
