Added format changes to companies

--- a/DSL/DMapper/hbs/get-business-register-simple-company-data.handlebars
+++ b/DSL/DMapper/hbs/get-business-register-simple-company-data.handlebars
@@ -6,5 +6,5 @@
     "staatus": "{{ keha.staatus }}",
     "staatus_tekstina": "{{ keha.staatus_tekstina }}",
     "esmakande_aeg": "{{ keha.esmakande_aeg }}",
-    "text": "{{keha.evnimi}} on {{keha.oiguslik_vorm_tekstina}} ({{keha.oiguslik_vorm}}), registrikoodiga {{keha.ariregistri_kood}} ja on hetkel {{keha.staatus_tekstina}}. Ettevõte on registreeritud {{keha.esmakande_aeg}}."
+    "text": "{{keha.evnimi}} (registrikood {{keha.ariregistri_kood}}) on {{formatDateToEstonian keha.esmakande_aeg}} ning on hetkel äriregistris tegutsev ettevõte."
 }
