--- a/DSL/DMapper/hbs/get_revenue_with_code.handlebars
+++ b/DSL/DMapper/hbs/get_revenue_with_code.handlebars
@@ -3,7 +3,7 @@
     {{#each hits}}
             {
               "result": "{{ _source.turnover }}",
-              "text": "{{ _source.name }} käive oli {{ formatToReadableNumber _source.turnover }} eurot "
+              "text": "{{ _source.name }} käive {{../year}}. aasta eelmisel kvartalil {{ formatToReadableNumber _source.turnover }} eurot"
             }{{#unless @last}},{{/unless}}
     {{/each}}
     ]
