--- a/DSL/DMapper/hbs/calendar/national-holidays/get_national_holiday_by_month.handlebars
+++ b/DSL/DMapper/hbs/calendar/national-holidays/get_national_holiday_by_month.handlebars
@@ -1,3 +1,3 @@
 {
-  "result": "Kõik riigipühad antud kuus on: \\n{{#each data}}*{{date}}\\n {{name}}\\n\\n{{/each}}"
+  "result": "{{formatDateToEstonian data.date true}} on järgmised riigipühad: \\n\\n{{#each data.holidays}}**{{formatDateToEstonian date}}**\\n {{name}}\\n\\n{{/each}}"
 }
