--- a/DSL/DMapper/hbs/calendar/national-holidays/get_national_holiday_ytd.handlebars
+++ b/DSL/DMapper/hbs/calendar/national-holidays/get_national_holiday_ytd.handlebars
@@ -1,3 +1,3 @@
 {
-  "result": "Kõik riigipühad aasta algusest kuni tänaseni:\n\n{{#each data}}{{formatDate this.date}} - {{this.name}}\n{{/each}}"
+  "result": "Kõik riigipühad aasta algusest kuni tänaseni:\\n\\n{{#each data}}{{formatDate this.date}} - {{this.name}}\\n{{/each}}"
 }
