Fix companies employees

--- a/DSL/DMapper/hbs/get_employees_with_code.handlebars
+++ b/DSL/DMapper/hbs/get_employees_with_code.handlebars
@@ -2,7 +2,7 @@
     "employees": [
     {{#each hits}}
             {
-              "text": "Ettevõttes {{ _source.name }} töötab {{ _source.workers }} inimest."
+              "text": "Ettevõttes {{ _source.name }} töötab {{ _source.workers }} inimest.",
               "result": "{{ _source.name }}"
             }{{#unless @last}},{{/unless}}
     {{/each}}
