--- a/DSL/DMapper/hbs/get-business-register-simple-company-data.handlebars
+++ b/DSL/DMapper/hbs/get-business-register-simple-company-data.handlebars
@@ -6,5 +6,5 @@
     "staatus": "{{ keha.staatus }}",
     "staatus_tekstina": "{{ keha.staatus_tekstina }}",
     "esmakande_aeg": "{{ keha.esmakande_aeg }}",
-    "text": "{{keha.evnimi}} (registrikood {{keha.ariregistri_kood}}) on {{formatDateToEstonian keha.esmakande_aeg}} ning on hetkel äriregistris tegutsev ettevõte."
+    "text": "{{keha.evnimi}} (registrikood {{keha.ariregistri_kood}}) on registreeritud {{formatDateToEstonian keha.esmakande_aeg}} ning on hetkel äriregistris tegutsev ettevõte."
 }
