--- a/DSL/DMapper/hbs/calendar/national-holidays/get_national_holiday_by_single_month.handlebars
+++ b/DSL/DMapper/hbs/calendar/national-holidays/get_national_holiday_by_single_month.handlebars
@@ -1,3 +1,4 @@
 {
-    "result": "{{formatDateToEstonian data.date true}} on {{data.name}} {{formatDateToEstonian data.date}}."
+    "result": "{{formatDateToEstonian data.[0].startDate true}} on {{data.[0].name.[0].text}} {{formatDateToEstonian data.[0].startDate}}."
 }
+
