--- a/DSL/DMapper/hbs/calendar/national-holidays/get_national_holiday_by_name.handlebars
+++ b/DSL/DMapper/hbs/calendar/national-holidays/get_national_holiday_by_name.handlebars
@@ -1,3 +1,3 @@
 {
-    "result": "{{data.name}} on {{formatDateToEstonian data.date}}"
+    "result": "{{capitalizeFirstLetter data.[0].name.[0].text}} on {{formatDateToEstonian data.[0].startDate}}"
 }
