--- a/DSL/DMapper/hbs/calendar/national-holidays/get_national_holiday_eoy.handlebars
+++ b/DSL/DMapper/hbs/calendar/national-holidays/get_national_holiday_eoy.handlebars
@@ -1,3 +1,3 @@
 {
-  "result": "Kõik riigipühad alates tänasest kuni aasta lõpuni on:\\n\\n{{#each data}}{{formatDate this.date}} - {{this.name}}\\n{{/each}}"
+  "result": "Kõik riigipühad alates tänasest kuni aasta lõpuni on\\n\\n{{#each data}}{{formatDate this.startDate}} - {{this.name.[0].text}}{{#unless @last}}\\n{{/unless}}{{/each}}"
 }
