--- a/DSL/DMapper/hbs/calendar/national-holidays/get_national_holiday_next.handlebars
+++ b/DSL/DMapper/hbs/calendar/national-holidays/get_national_holiday_next.handlebars
@@ -1,3 +1,3 @@
 {
-  "result": "Järgmine riigipüha on {{data.name}}, mida tähistatakse {{formatDateToEstonian data.date}}."
+  "result": "Järgmine riigipüha on {{data.name.[0].text}}, mida tähistatakse {{formatDateToEstonian data.startDate}}."
 }
