--- a/DSL/DMapper/hbs/calendar/national-holidays/get_national_holiday_previous.handlebars
+++ b/DSL/DMapper/hbs/calendar/national-holidays/get_national_holiday_previous.handlebars
@@ -1,3 +1,3 @@
 {
-  "result": "Viimane riigipüha oli {{data.name}}, mida tähistati {{formatDateToEstonian data.date}}"
+  "result": "Viimane riigipüha oli {{data.[0].name.[0].text}}, mida tähistati {{formatDateToEstonian data.[0].startDate}}."
 }
